--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -29,6 +29,7 @@ a:link, a:active, a:hover, a:visited {
   box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.4);
   margin: 8mm auto;
   padding: 24px 48px;
+  word-wrap:break-word;
   @media only screen and (max-width: $breakpoint-sm) {
     margin: 0 auto;
     padding: 24px 24px;
